--- a/UF1_Proyecto/app/src/main/AndroidManifest.xml
+++ b/UF1_Proyecto/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
 
 
     <application
-        android:name=".data.TripApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -28,7 +27,8 @@
 
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
